<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/signup_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.10"
                app:srcCompat="@drawable/shakewherelogo" />


            <EditText
                android:id="@+id/signup_firstname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:padding="8dp" />

            <EditText
                android:id="@+id/signup_lastname"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"/>

            <Button
                android:id="@+id/signup_signup"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_rounded"
                android:minWidth="200dp"
                android:minHeight="50dp"
                android:text="@string/signup"
                android:textSize="25sp"
                app:cornerRadius="30dp"/>

            <TextView
                android:id="@+id/signup_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="14dp"
                android:padding="8dp"
                android:text="@string/Account"
                android:textColor="@color/primarycolour"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>