<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/row_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/row_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/row_performance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/performance"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_seatdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/seatDetails"
            android:textColor="@color/black"/>

        <LinearLayout
            android:id="@+id/row_expandablecontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/row_playwrightvenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/PlaywriteVenue"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/row_datetimeacessiblity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/DateTimeAccess"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

                <Button
                    android:id="@+id/row_deletebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_rounded"
                    android:layout_marginStart="5dp"
                    android:minWidth="250dp"
                    android:minHeight="50dp"
                    android:text="@string/delete"
                    android:textSize="25sp"
                    app:cornerRadius="30dp" />




        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>