<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <ImageView
        android:id="@+id/homepage_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        app:srcCompat="@drawable/shakewherelogo" />

    <Button
        android:id="@+id/homepage_signup"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:text="@string/signup"
        android:textSize="25sp"

        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_logo" />

    <Button
        android:id="@+id/homepage_login"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_rounded"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:text="@string/login"
        android:textSize="25sp"

        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_signup" />



</androidx.constraintlayout.widget.ConstraintLayout>