<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey">

    <LinearLayout
        android:id="@+id/row_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/row_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/row_performance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/performance"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/row_expandablecontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <TextView
                    android:id="@+id/row_playwrightvenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/PlaywriteVenue"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/row_datetimeacessiblity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/DateTimeAccess"
                    android:textColor="@color/black"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/seat"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black" />



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Spinner
                    android:id="@+id/row_seats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="200dp"
                    android:minHeight="50dp"
                    android:paddingBottom="5dp"/>



                <EditText
                    android:id="@+id/row_ticketstobook"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center"
                    android:ems="10"
                    android:inputType="number"
                    android:text="0"
                    android:layout_alignParentEnd="true"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />

                <EditText
                    android:id="@+id/row_totaltickets"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:minWidth="200dp"
                    android:minHeight="50dp"
                    android:text="/"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    tools:ignore="LabelFor,TouchTargetSizeCheck" />




            </RelativeLayout>
            <Button
                android:id="@+id/row_bookbutton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_rounded"
                android:layout_marginStart="5dp"
                android:minWidth="250dp"
                android:minHeight="50dp"
                android:text="@string/book"
                android:textSize="25sp"
                app:cornerRadius="30dp" />



        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>